--- a/index.html
+++ b/index.html
@@ -25,84 +25,103 @@
     <link rel="stylesheet" href="assets/css/pages/home.css">
 
     <header class="h-header wrapper">
-        <div class="h-header__links">
-            <h1><a href="#">Snap</a></h1>
-            <ul>
-                <li>
-                    <a href="#">Features
-                        <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
-                    </a>
-                    <ul class="h-header__dropdown">
-                        <li>
-                            <a href="#">
-                                <svg width="24" height="24">
-                                    <use xlink:href="assets/img/icones.svg#icones-1"></use>
-                                </svg>
-                                Todo List
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <svg width="24" height="24">
-                                    <use xlink:href="assets/img/icones.svg#icones-2"></use>
-                                </svg>
-                                Calendar
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <svg width="24" height="24">
-                                    <use xlink:href="assets/img/icones.svg#icones-3"></use>
-                                </svg>
-                                Reminders
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <svg width="24" height="24">
-                                    <use xlink:href="assets/img/icones.svg#icones-4"></use>
-                                </svg>
-                                Planning
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Company
-                        <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
-                    </a>
-                    <ul class="h-header__dropdown">
-                        <li>
-                            <a href="#">History</a>
-                        </li>
-                        <li>
-                            <a href="#">Our Team</a>
-                        </li>
-                        <li>
-                            <a href="#">Blog</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Careers
-                        <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">About
-                        <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div  class="h-header__buttons">
-            <a href="#">Login</a>
-            <a href="#">Register</a>
-        </div>
+        <nav class="h-header__nav">
+            <div class="h-header__links">
+                <h1><a href="#">Snap</a></h1>
+                <ul class="h-header__navlist">
+                    <li>
+                        <a href="#">Features
+                            <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
+                        </a>
+                        <ul class="h-header__dropdown">
+                            <li>
+                                <a href="#">
+                                    <svg width="24" height="24">
+                                        <use xlink:href="assets/img/icones.svg#icones-1"></use>
+                                    </svg>
+                                    Todo List
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <svg width="24" height="24">
+                                        <use xlink:href="assets/img/icones.svg#icones-2"></use>
+                                    </svg>
+                                    Calendar
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <svg width="24" height="24">
+                                        <use xlink:href="assets/img/icones.svg#icones-3"></use>
+                                    </svg>
+                                    Reminders
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <svg width="24" height="24">
+                                        <use xlink:href="assets/img/icones.svg#icones-4"></use>
+                                    </svg>
+                                    Planning
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Company
+                            <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
+                        </a>
+                        <ul class="h-header__dropdown">
+                            <li>
+                                <a href="#">History</a>
+                            </li>
+                            <li>
+                                <a href="#">Our Team</a>
+                            </li>
+                            <li>
+                                <a href="#">Blog</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Careers
+                            <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">About
+                            <svg height="30" viewBox="0 0 48 48" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M14.83 16.42l9.17 9.17 9.17-9.17 2.83 2.83-12 12-12-12z"/><path d="M0-.75h48v48h-48z" fill="none"/></svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <button class="mobile-only"></button>
+            <div  class="h-header__buttons">
+                <a href="#">Login</a>
+                <a href="#">Register</a>
+            </div>
+        </nav>
     </header>
 
     <main>
-        
+        <section class="h-main wrapper">
+            <div class="h-main__contents">
+                <h2>
+                    Make <span>Remote work</span>
+                </h2>
+                <p>Get Your in sync, no matter your location. Streamline processes. Create team rituals, and  watch productivity soar.</p>
+                <a href="#">Learn more</a>
+                <figures class="h-main__figures">
+                    <svg class="icon">
+                        <use xlink:href="assets/img/icones.svg#icones-5"></use>
+                    </svg>
+                </figures>
+            </div>
+            <figure class="h-main__image">
+               
+            </figure>
+        </section>
     </main>
 
     <footer class="footer">
