--- a/index.html
+++ b/index.html
@@ -116,10 +116,20 @@
                     <svg class="icon">
                         <use xlink:href="assets/img/icones.svg#icones-5"></use>
                     </svg>
+                    <svg class="icon">
+                        <use xlink:href="assets/img/icones.svg#icones-6"></use>
+                    </svg>
+                    <svg class="icon">
+                        <use xlink:href="assets/img/icones.svg#icones-8"></use>
+                    </svg>
+                    <svg class="icon">
+                        <use xlink:href="assets/img/icones.svg#icones-7"></use>
+                    </svg>
                 </figures>
             </div>
             <figure class="h-main__image">
-               
+               <img  class="desktop-only" src="assets/img/main images/image-hero-desktop.png" alt="">
+               <img  class="mobile-only" src="assets/img/main images/image-hero-mobile.png" alt="">
             </figure>
         </section>
     </main>
