--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     <link rel="stylesheet" href="assets/css/main.css">
 
-    <title>Project Title</title>
+    <title>Snap</title>
 </head>
 <body class="home">
     <link rel="stylesheet" href="assets/css/pages/home.css">
@@ -128,15 +128,11 @@
                 </figures>
             </div>
             <figure class="h-main__image">
-               <img  class="desktop-only" src="assets/img/main images/image-hero-desktop.png" alt="">
-               <img  class="mobile-only" src="assets/img/main images/image-hero-mobile.png" alt="">
+               <img  width="750" height="560" class="desktop-only" src="assets/img/main images/image-hero-desktop.png" alt="">
+               <img  width="729" height="973" class="mobile-only" src="assets/img/main images/image-hero-mobile.png" alt="">
             </figure>
         </section>
     </main>
-
-    <footer class="footer">
-
-    </footer>
     
     <script src="assets/js/main.js"></script>
     <script src="assets/js/h-header.js"></script>
